# django_hedera

./: Makefile  pyproject.toml
core/project/: urls.py
core/project/settings/: __init__.py  base.py  development.py  utils_config.py
